--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.4.5",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "stylus": "^0.55.0",
     "stylus-loader": "^6.1.0",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.14"
   }
 }
